--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@kinde-oss/kinde-auth-nextjs": "^2.3.6",
     "@reduxjs/toolkit": "^2.2.7",
+    "dotenv": "^16.4.5",
     "next": "14.2.5",
     "nextjs-toploader": "^1.6.12",
     "react": "^18",
