--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.3.27",
+    "mongodb": "^6.8.0",
     "next": "14.2.5",
     "nextjs-toploader": "^1.6.12",
     "react": "^18",
